# ng-siem

./: .gitignore  Dockerfile  Procfile  README.md  gcp_siem_design.md  go.mod  go.sum  main.go
config/: bucket_metadata.json  gcp_siem_logs_lifecycle.json  gcp_siem_logs_schema.json
docs/: gcp_siem_implementation_plan.md
node-pubsub-app/: .dockerignore  Dockerfile  index.js  package-lock.json  package.json
node-pubsub-app/public/: index.html
rust-cloud-run/: Cargo.toml  Dockerfile
rust-cloud-run/src/: main.rs
rust-cloud-run/templates/: index.html
src/: crowdstrike_edr_mock.py  log_collector.py
src/dataflow/: crowdstrike-edr-mock-pipeline.py
